@@ -8937,6 +8937,45 @@ argument_list|(
 name|keyFieldName
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|rb
+operator|.
+name|rsp
+operator|.
+name|getReturnFields
+argument_list|()
+operator|.
+name|getFieldRenames
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|keyFieldName
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// if id was renamed we need to use the new name
+name|keyFieldName
+operator|=
+name|rb
+operator|.
+name|rsp
+operator|.
+name|getReturnFields
+argument_list|()
+operator|.
+name|getFieldRenames
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|keyFieldName
+argument_list|)
+expr_stmt|;
+block|}
 for|for
 control|(
 name|ShardResponse
