@@ -679,6 +679,121 @@ argument_list|,
 literal|7
 argument_list|)
 expr_stmt|;
+comment|// SOLR-6744
+name|rsp
+operator|=
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"key:id"
+argument_list|,
+literal|"sort"
+argument_list|,
+literal|"payload asc"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"20"
+argument_list|)
+expr_stmt|;
+name|assertFieldValues
+argument_list|(
+name|rsp
+operator|.
+name|getResults
+argument_list|()
+argument_list|,
+literal|"key"
+argument_list|,
+literal|7
+argument_list|,
+literal|1
+argument_list|,
+literal|6
+argument_list|,
+literal|4
+argument_list|,
+literal|2
+argument_list|,
+literal|10
+argument_list|,
+literal|12
+argument_list|,
+literal|3
+argument_list|,
+literal|5
+argument_list|,
+literal|9
+argument_list|,
+literal|8
+argument_list|,
+literal|13
+argument_list|,
+literal|11
+argument_list|)
+expr_stmt|;
+name|rsp
+operator|=
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"key:id,id:text"
+argument_list|,
+literal|"sort"
+argument_list|,
+literal|"payload asc"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"20"
+argument_list|)
+expr_stmt|;
+name|assertFieldValues
+argument_list|(
+name|rsp
+operator|.
+name|getResults
+argument_list|()
+argument_list|,
+literal|"key"
+argument_list|,
+literal|7
+argument_list|,
+literal|1
+argument_list|,
+literal|6
+argument_list|,
+literal|4
+argument_list|,
+literal|2
+argument_list|,
+literal|10
+argument_list|,
+literal|12
+argument_list|,
+literal|3
+argument_list|,
+literal|5
+argument_list|,
+literal|9
+argument_list|,
+literal|8
+argument_list|,
+literal|13
+argument_list|,
+literal|11
+argument_list|)
+expr_stmt|;
 name|rsp
 operator|=
 name|query
@@ -829,6 +944,44 @@ argument_list|,
 literal|2
 argument_list|,
 literal|4
+argument_list|)
+expr_stmt|;
+comment|// SOLR-6744
+name|rsp
+operator|=
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"text:b"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"key:id"
+argument_list|,
+literal|"sort"
+argument_list|,
+literal|"payload asc"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"20"
+argument_list|)
+expr_stmt|;
+name|assertFieldValues
+argument_list|(
+name|rsp
+operator|.
+name|getResults
+argument_list|()
+argument_list|,
+name|id
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|rsp
